syntax = "proto3";

option csharp_namespace = "Grpc.Server";

service Xilinx {
  // Define a unary RPC (simple request-response)
  rpc SendCommand (XilinxRequest) returns (XilinxReply);
  rpc Open (Void) returns (XilinxReply);
  rpc Close (Void) returns (XilinxReply);
}

// Define the request message
message XilinxRequest {
  string command = 1;
}

// Define the response message
message XilinxReply {
  string message = 1;
}

message Void {
}